src/test/deca/context/extension/invalid/TAB_new_array.deca
{
    new int[2][5][9445];
}